<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BleListener</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="start_scan">Scan</string>
    <string name="start_scan_all">Scan All</string>
    <string name="save_dev_log">Save</string>
    <string name="set_param">Set</string>
    <string name="next_pan">ADDR+16</string>
   	<string name="up_pan">ADDR-16</string>
   	<string name="next_addr">ADDR+1</string>
    <string name="blescan_sum">蓝牙设备起始地址</string>
    <string name="bledev_name_addr">搜索到的蓝牙设备列表</string>
 
</resources>
