<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cn.paytube.testblelistener.MainActivity">

        <ListView 
            android:id="@+id/list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbars="none" />
        
      <Button 
          android:id="@+id/scan"
          android:layout_width="100dp"
          android:layout_height="50dp"
          android:text="@string/start_scan"
          />
           <Button 
          android:id="@+id/scan_all"
          android:layout_width="100dp"
          android:layout_height="50dp"
          android:layout_toRightOf="@+id/scan"
          android:text="@string/start_scan_all"
          />
       <Button 
          android:id="@+id/save"
          android:layout_width="100dp"
          android:layout_height="50dp"
          android:layout_toRightOf="@+id/scan_all"
          android:text="@string/save_dev_log"
          />
       <Button 
          android:id="@+id/setting"
          android:layout_width="80dp"
          android:layout_height="100dp"
          android:layout_toRightOf="@+id/save"
          android:text="@string/set_param"
          />
       
        <Button 
          android:id="@+id/up_pan"
          android:layout_width="100dp"
          android:layout_height="50dp"
          android:layout_below="@+id/scan"
          android:text="@string/up_pan"
         />
        
                  
      <Button 
          android:id="@+id/next_pan"
          android:layout_width="100dp"
          android:layout_height="50dp"
          android:layout_below="@+id/scan"
          android:layout_toRightOf="@+id/up_pan"
          android:text="@string/next_pan"
          />
     	<Button 
          android:id="@+id/next_addr"
          android:layout_width="100dp"
          android:layout_height="50dp"
          android:layout_below="@+id/scan"
          android:layout_toRightOf="@+id/next_pan"
          android:text="@string/next_addr"
          />

      <TextView
        android:id="@+id/editText_blescan_sum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
	    android:layout_below="@+id/up_pan"
        android:ems="50"
        android:hint="@string/blescan_sum"
        android:text="" />
      
      <TextView
        android:id="@+id/editText_bledev_name_addr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
	    android:layout_below="@+id/editText_blescan_sum"
        android:ems="1600"
        android:hint="@string/bledev_name_addr"
        android:text="" />
      
</RelativeLayout>
